--- a/index.html
+++ b/index.html
@@ -33,22 +33,13 @@
     <div id="js-playerPickElement" class="container">
         <div class="row text-center">
             <button id="js-playerPick_rock" class="btn">
-                <span class="badge">
                     <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
-                </span>
-                Rock
             </button>
             <button id="js-playerPick_paper"  class="btn">
-                <span class="badge">
                     <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
-                </span>
-                Paper
             </button>
             <button id="js-playerPick_scissors"  class="btn">
-                <span class="badge">
                     <i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
-                </span>
-                Scissors
             </button>
         </div>
     </div>
@@ -61,7 +52,7 @@
                 <span id="js-playerPoints" class="badge">
                     0
                 </span>
-                <span id="js-playerName">
+                <span id="js-playerName" class="font">
                     Player's name
                 </span>
             </div>
@@ -72,31 +63,33 @@
                 <span id="js-computerPoints" class="badge">
                     0
                 </span>
-                Computer
+                <span  class="font">
+                    Computer
+                </span>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-5 text-center">
-                <span id="js-playerPick">
+                <span id="js-playerPick" class="font">
                     Player's choice
                 </span>
             </div>
             <div class="col-xs-2"></div>
             <div class="col-xs-5 text-center">
-                <span id="js-computerPick">
+                <span id="js-computerPick" class="font">
                     Computer's choice
                 </span>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-5 text-center">
-                <span id="js-playerResult">
+                <span id="js-playerResult" class="font">
                     Player's score
                 </span>
             </div>
             <div class="col-xs-2"></div>
             <div class="col-xs-5 text-center">
-                <span id="js-computerResult">
+                <span id="js-computerResult" class="font">
                     Computer's score
                 </span>
             </div>
